# test--name--shareapp-

./: .gitignore  README.md  package-lock.json  package.json  vercel.json
backend/: dev.db  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  db.py  main.py  models.py  signaling.py  storage.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/files/[fileId]/chunks/[idx]/: route.ts
frontend/src/app/api/shares/: route.ts
frontend/src/lib/: browser-crypto.ts  d1.ts  env.ts  qr.ts  r2.ts
src/: package-lock.json  package.json
src/app/: page.tsx
src/app/api/receive/[code]/: route.ts
src/lib/: constants.ts
src/src/: middleware.ts
src/src/app/: globals.css  layout.tsx  page.tsx
src/src/app/api/files/[fileId]/complete/: route.ts
src/src/app/api/shares/: route.ts
src/src/app/components/: BackgroundCanvas.tsx  BrandMark.tsx  ClerkProviderWithTheme.tsx  Cursor.tsx  Nav.tsx  ThemeAssets.tsx  VideoBg.tsx
src/src/app/receive/: page.tsx
src/src/lib/: code.ts  d1.ts  env.ts  utils.ts
